Use latest Java version.